@@ -19,6 +19,8 @@ Version 1.3.1+svn:
   * User interface:
     * Interface actions such as pressing a button, toggling a checkbox or
       opening a menu (among others) will now emit small sounds.
+    * If deprecated WML is being encountered and error message will be shown,
+      this way creators of WML code can be easier informed about the problems.
   * Language and translations
     * Updated translations: Bulgarian, Czech, Danish, Dutch, German, Italian,
       Norwegian, Portuguese (Brazil).
